[package]
name = "god_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
ethers = {version = "0.17", features = ["eip712", "abigen"]}
hyperliquid_rust_sdk = "0.2.2"
log = "0.4.20"
reqwest = "0.11.23"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
tokio = "1.35.1"
