[package]
name = "god_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.0"
ethers = {version = "0.17", features = ["eip712", "abigen"]}
hyperliquid_rust_sdk = "0.2.2"
log = "0.4.20"
reqwest = "0.11.23"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
